Chỉnh giao diện bài hát

--- a/NgheNhacTrucTuyen/Views/Home/BaiHat.cshtml
+++ b/NgheNhacTrucTuyen/Views/Home/BaiHat.cshtml
@@ -327,7 +327,7 @@
                                   ">
                                                     @foreach (var item in ViewBag.list)
                                                     {
-                                                        <div class="LunqxlFIupJw_Dkx6mNx">
+                                                        <div onclick="window.location.href='/Home/Baihat/@item.MaBH'" class="LunqxlFIupJw_Dkx6mNx">
                                                             <div draggable="true"
                                                                  class="XiVwj5uoqqSFpS4cYOC6">
                                                                 <div class="xBV4XgMq0gC5lQICFWY_">
@@ -339,7 +339,7 @@
                                                                     </div>
                                                                     <div class="woJQ5t2YiaJhjTv_KE7p">
                                                                         <div class="PFgcCoJSWC3KjhZxHDYH">
-                                                                            <button id="play-button1" onclick="playaudio1('/Sound/@item.Files', '/image/@item.image', '@item.TenBH', '@item.CaSi.TenCS' )" class="Button-qlcn5g-0 cKBTSk">
+                                                                            <button id="play-button1" onclick=" event.stopPropagation(); playaudio1('/Sound/@item.Files', '/image/@item.image', '@item.TenBH', '@item.CaSi.TenCS' )" class="Button-qlcn5g-0 cKBTSk">
                                                                                 <i class="fa-solid fa-circle-play fa-3x"></i>
                                                                             </button>
                                                                         </div>
