--- a/NgheNhacTrucTuyen/Views/Shared/_Layout.cshtml
+++ b/NgheNhacTrucTuyen/Views/Shared/_Layout.cshtml
@@ -34,6 +34,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="icon" href="~/image/logo.jpg" type="image/png" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -134,11 +135,11 @@
             <div class="Root__top-bar">
                 <header class="header header-br">
                     <div class="Button">
-                        
+
                         <button aria-label="Quay lại" class="btn return-button" onclick="history.back();">
                             <i class="fa-solid fa-angle-left"></i>
                         </button>
-                        
+
                         <button aria-label="Tiếp theo" class="btn forward-button" onclick="history.forward();">
                             <i class="fa-solid fa-angle-right"></i>
                         </button>
@@ -184,25 +185,22 @@
                     <ul class="RSg3qFREWrqWCuUvDpJR">
                         <li class="eNs6P3JYpf2LScgTDHc6 InvalidDropTarget">
                             <a href="/Home" aria-current="page"
-                                   class="link-subtle ATUzFKub89lzvkmvhpyE"
-                                   draggable="false"
-                                  >
+                               class="link-subtle ATUzFKub89lzvkmvhpyE"
+                               draggable="false">
                                 <i class="fa-solid fa-house"></i>
                                 <span class="Type__TypeElement-goli3j-0 hkMLug ellipsis-one-line">Trang chủ</span>
                             </a>
                         </li>
                         <li class="eNs6P3JYpf2LScgTDHc6 InvalidDropTarget">
                             <a href="/Home/TimKiem" class="link-subtle ATUzFKub89lzvkmvhpyE"
-                                   draggable="false"
-                                   >
+                               draggable="false">
                                 <i class="fa-solid fa-magnifying-glass"></i>
                                 <span class="Type__TypeElement-goli3j-0 hkMLug ellipsis-one-line">Tìm kiếm</span>
                             </a>
                         </li>
                         <li class="eNs6P3JYpf2LScgTDHc6 InvalidDropTarget">
                             <a href="@linkLibrary" class="link-subtle ATUzFKub89lzvkmvhpyE"
-                                   draggable="false"
-                                   >
+                               draggable="false">
                                 <i class="fa-solid fa-swatchbook"></i>
                                 <span class="Type__TypeElement-goli3j-0 hkMLug ellipsis-one-line">Thư viện</span>
                             </a>
@@ -211,16 +209,14 @@
                             {
                                 <li class="eNs6P3JYpf2LScgTDHc6 InvalidDropTarget">
                                     <a href="@linkDSBaiHat" class="link-subtle ATUzFKub89lzvkmvhpyE"
-                                           draggable="false"
-                                           >
+                                       draggable="false">
                                         <i class="fa-solid fa-list-check"></i>
                                         <span class="Type__TypeElement-goli3j-0 hkMLug ellipsis-one-line">Quản lý bài hát</span>
                                     </a>
                                 </li>
                                 <li class="eNs6P3JYpf2LScgTDHc6 InvalidDropTarget">
                                     <a href="@linkDSTaiKhoan" class="link-subtle ATUzFKub89lzvkmvhpyE"
-                                           draggable="false"
-                                           >
+                                       draggable="false">
                                         <i class="fa-solid fa-user"></i>
                                         <span class="Type__TypeElement-goli3j-0 hkMLug ellipsis-one-line">Quản lý tài khoản</span>
                                     </a>
@@ -233,8 +229,8 @@
                             <div class="GlueDropTarget GlueDropTarget--albums GlueDropTarget--tracks GlueDropTarget--local-tracks GlueDropTarget--episodes">
 
                                 <a href="@linkThemPL" type="button" id="mybtn"
-                                        class="IPVjkkhh06nan7aZK7Bx"
-                                        data-testid="create-playlist-button">
+                                   class="IPVjkkhh06nan7aZK7Bx"
+                                   data-testid="create-playlist-button">
                                     <div class="Bwc9jlVb7HWs8JJupnBB">
                                         <div class="q3ABXYJT9JZIzXOOtVuO">
                                             <i class="fa-solid fa-plus Svg-ytk21e-0 eqtHWV"></i>
@@ -246,7 +242,7 @@
                             </div>
                             <div class="GlueDropTarget GlueDropTarget--tracks">
                                 <a href="@linkBaiHatYeuThich" class="r9YzlaAPnM2LGK97GSfa"
-                                       draggable="false">
+                                   draggable="false">
                                     <div class="bFQ9NOIn1bDs8tTH0ebQ">
                                         <div class="Nd_DeCpszONzyaLe5Wd1">
                                             <i class="fa-solid fa-heart Svg-ytk21e-0 eqtHWV"></i>
@@ -524,8 +520,8 @@
         };
 
 
-       
-        
+
+
     </script>
 
 
