--- a/NgheNhacTrucTuyen/Views/login/Login.cshtml
+++ b/NgheNhacTrucTuyen/Views/login/Login.cshtml
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>COLMUSIC - Đăng nhập</title>
-    <link rel="icon" href="https://banner2.cleanpng.com/20191001/gc/transparent-musical-note-icon-music-icon-5d93ae3cc2e344.5700187015699594847983.jpg" />
+    <link rel="icon" href="~/image/logo.jpg" type="image/png" />
     <link rel="stylesheet" href="~/Content/logincss.css" />
     <link rel="stylesheet" href="~/fonts/fontawesome-free-6.2.0-web/css/all.min.css" />
     <style>
