--- a/NgheNhacTrucTuyen/Views/login/SignUp.cshtml
+++ b/NgheNhacTrucTuyen/Views/login/SignUp.cshtml
@@ -61,7 +61,18 @@
            
         }
 
-        
+
+        .form-title {
+            font-size: 32px; 
+        }
+
+        .content-item label {
+            font-size: 18px; 
+        }
+
+        .content-item input {
+            font-size: 16px; 
+        }
 
 
       
