--- a/NgheNhacTrucTuyen/Views/login/Login.cshtml
+++ b/NgheNhacTrucTuyen/Views/login/Login.cshtml
@@ -63,6 +63,18 @@
             height: 600px;
         }
 
+        .form-title {
+            font-size: 32px;
+        }
+
+        .content-item label {
+            font-size: 18px;
+        }
+
+        .content-item input {
+            font-size: 16px;
+        }
+
         
 
         .form-title {
